--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -27,7 +27,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="100dp"
-            android:text="LEGE VERLANGLIJST"
+            android:text="LEGE WINKELMAND"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="22sp"
